Added new endpoints to start chess game
